--- a/dom/style.css
+++ b/dom/style.css
@@ -1,4 +1,4 @@
-.heading {
+/* .heading {
     font-size: 60px;
     color: rgb(17, 17, 24);
 }
@@ -21,4 +21,4 @@ p {
 .container {
     text-align: center;
     display: column;
-}
+} */
